fix(mobile): fixed mobile menus not showing

--- a/src/App.css
+++ b/src/App.css
@@ -280,9 +280,7 @@ body {
     --options-width: 0px;
     --extra-tiles-width: 0px;
   }
-  /* Trigger hamburger menu */
   #options, #extraTiles, #moreInfo {
-    display: none;
     width: 100%;
     z-index: 1001;
   }
